# feedzai-challenge

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
mysite/elastic/: __init__.py  apps.py  models.py  views.py
mysite/mysite/: settings.py  urls.py
mysite/proxy/: views.py
